# World-Robotics-Olympiad-ARC-2018

./: CMakeLists.txt  README.md  package.xml
launch/: beforeCamera.launch
msg/: Angles.msg  BlockData.msg  ControlSignal.msg  CtrlSigResponse.msg  Dyx.msg  Dyx2.msg  Vector5.msg  Vector5f.msg  blkData.msg  bot.msg  debugMotor.msg  toCam.msg
scripts/ArmControls/: GetTorque.py  GripperTest.py  InverseTest.py  PickupXYZ.py  StepDown.py  constants.py  dropBlock.py  inverseK.py  move2standard.py  pickupHARDCODE.py  pickupxyz.py  print_Load.py  print_arm_angles.py  rough_testing.py  servo_functions.py  super_servo_functions.py  writeAngleSingle.py
scripts/AtmegaNode/: .AtmegaNode.cpp.swp  .LineFollowing.cpp.swp  .containers.h.swp  AtmegaNode.cpp  ImageProcessing.cpp  LineFollowing.cpp  Navigation.cpp  NavigationMaster.cpp  a.out  containers.h  defines.h  disableTorques.cpp  getBlockData.cpp  lfTest.py  motorTest.cpp  navTest.cpp  oldNav.cpp  unit_Atmega_DeliveryChute.cpp  unit_Atmega_Stack.cpp  unit_Atmega_WhiteSpace.cpp  unit_Atmega_goHome.cpp  unit_LineFollowing.cpp  unit_LineFollowing_slow.cpp  unit_Stack_1.cpp  unit_Stack_2.cpp  unit_Stack_3.cpp  unit_Stack_4.cpp  unit_Stack_5.cpp  unit_Stack_6.cpp  unit_Stack_7.cpp  unit_arm_cordinator_disable.cpp  unit_arm_cordinator_enable.cpp  unit_arm_pickup.cpp  unit_arm_stack.cpp  unit_arm_standard.cpp  unit_arm_standard_with_cordinator.cpp  unit_botBackward.cpp  unit_botForward.cpp  unit_botSpot_Left.cpp  unit_botSpot_Right.cpp  (+4 more)
scripts/IpNode/: .CameraNode.py.swp  CameraNode.py  block_recognition.py  block_recognition2.py  calibrateBlocks.py  colo_extrectCopy2.py  imread.py  run.py  savePhotos.py
scripts/MasterNode/: MasterNode.cpp  MasterNode.py  constants.py
scripts/ServoNode/: .super_servo_functions.py.swn  .super_servo_functions.py.swo  .super_servo_functions.py.swp  .super_servo_functions.pyvim.swp  DynamixelNode.py  ForwardTest.py  GripDisable.py  GripEnable.py  GripperTest.py  InverseTest.py  LIDAR_Node.py  armplaytesting.py  ch341_drv.tar.bz2  compressArm.py  constants.py  disableTorqueServos.py  dropBlock.py  fk3.py  forwardK.py  inverseK.py  move2standard.py  move2standardNorm.py  moveDown.py  pickupHARDCODE.py  print_arm_angles.py  read_servo_angles.py  super_servo_functions.py  unit_Lidar.py  write_servo_angles.py
